Alignment fix attempt

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -9,6 +9,10 @@
 
 /* Home layout */
 
+.content {
+    position: relative;
+}
+
 .homegrid {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr 3fr 1fr;
@@ -48,6 +52,7 @@
 .backdrop-image {
     width: 100%;
     z-index: -1;
+    position: absolute;
 }
 
 .backdrop-image--takeaway {
